--- a/vercel.json
+++ b/vercel.json
@@ -42,6 +42,15 @@
           "value": "public, max-age=31536000, immutable"
         }
       ]
+    },
+    {
+      "source": "/(.*).html",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=0, must-revalidate"
+        }
+      ]
     }
   ],
   "rewrites": [
@@ -65,12 +74,5 @@
       "destination": "/",
       "permanent": true
     }
-  ],
-  "functions": {
-    "**/*.html": {
-      "headers": {
-        "Cache-Control": "public, max-age=0, must-revalidate"
-      }
-    }
-  }
+  ]
 }
